--- a/WorkitemCreator/WorkitemTemplateViewControl.xaml
+++ b/WorkitemCreator/WorkitemTemplateViewControl.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WorkitemCreator"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" >
     <Grid MinHeight="430" MinWidth="250">
         <Grid.ColumnDefinitions>
@@ -26,9 +25,7 @@
         <Label Content="Description:" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"/>
         <TextBox HorizontalAlignment="Stretch" TextWrapping="Wrap" Name="Description"  Grid.Row="3" Grid.Column="1" MinWidth="200" VerticalAlignment="Stretch" Margin="3" />
         
-        <TabControl Name="WorkItemChildren" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
-            
-        </TabControl>
+        <TabControl Name="WorkItemChildren" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" />
 
 
     </Grid>
