--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition MaxHeight="30"/>
             <RowDefinition MaxHeight="30"/>
+            <RowDefinition MaxHeight="30"/>
             <RowDefinition />
             <RowDefinition MaxHeight="30"/>
             <RowDefinition MaxHeight="30"/>
@@ -23,12 +24,18 @@
             <TextBox Name="ServiceUrl" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="3" MinWidth="300" />
             <Button Name="ConnectToAzDo" Content="Connect to AzDo" Margin="3" Padding="3" Click="ConnectToAzDo_Click"></Button>
         </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+            <Label Content="Select Collection:"/>
+            <ComboBox Name="TeamProjectCollectionList" MinWidth="150" IsEnabled="False" SelectionChanged="TeamProjectCollectionList_SelectionChanged"></ComboBox>
+            <Label Content="Select Team Project:"/>
+            <ComboBox Name="TeamProjectList" MinWidth="150" IsEnabled="False" SelectionChanged="TeamProjectList_SelectionChanged"></ComboBox>
+        </StackPanel>
         
-        <TabControl Grid.Row="2" Grid.Column="1" Name="WorkItemTemplates" />
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="3" Grid.Column="1">
+        <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" />
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1">
             <Button Name="CreateWorkitems" Content="Create Workitem(s)" Margin="3" Padding="3" Click="CreateWorkitems_Click" IsEnabled="False"></Button>
         </StackPanel>
-        <StatusBar Name="StatusBar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4">
+        <StatusBar Name="StatusBar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="5">
             <StatusBarItem MinWidth="50">
                 <Label Name="ConnectionState" Content="Not connected"></Label>
             </StatusBarItem>
