--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Workitem Creator" Height="600" Width="600">
+        Title="Workitem Creator" Height="640" Width="600" 
+        Background="NavajoWhite" FontFamily="Calibri" FontSize="15">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MaxWidth="20"/>
@@ -21,8 +22,8 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
             <Label Content="Service Url:" HorizontalAlignment="Left"  VerticalAlignment="Center" />
-            <TextBox Name="ServiceUrl" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="3" MinWidth="300" />
-            <Button Name="ConnectToAzDo" Content="Connect to AzDo" Margin="3" Padding="3" Click="ConnectToAzDo_Click"></Button>
+            <TextBox Name="ServiceUrl"  VerticalAlignment="Center" Margin="3" MinWidth="300" />
+            <Button Name="ConnectToAzDo" Content="Connect to AzDO"  Click="ConnectToAzDo_Click" ToolTip="If you think this should be 'ADO' your noob is showing."></Button>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
             <Label Content="Select Collection:"/>
@@ -33,16 +34,54 @@
         
         <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1">
-            <Button Name="CreateWorkitems" Content="Create Workitem(s)" Margin="3" Padding="3" Click="CreateWorkitems_Click" IsEnabled="False"></Button>
+            <Button Name="CreateWorkitems" Content="Create Workitem(s)"  Click="CreateWorkitems_Click" IsEnabled="False"></Button>
         </StackPanel>
         <StatusBar Name="StatusBar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="5">
             <StatusBarItem MinWidth="50">
                 <Label Name="ConnectionState" Content="Not connected"></Label>
             </StatusBarItem>
             <StatusBarItem HorizontalContentAlignment="Stretch">
-                <Label Name="LastMessage" Content="Loading..."></Label>
+                <Label Name="LastMessage" Content="Please connect to Azure DevOps"></Label>
             </StatusBarItem>
 
         </StatusBar>
     </Grid>
+    <Window.Resources>
+        <!-- This window style doesnt work -->
+        <!--<Style TargetType="Window">
+            <Setter Property="Background" Value="NavajoWhite" />
+            <Setter Property="FontFamily" Value="Calibri" />
+            <Setter Property="FontSize" Value="16" />
+        </Style>-->
+        <Style TargetType="Label">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+
+        </Style>
+        <Style TargetType="TabControl">
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="Background" Value="AntiqueWhite" />
+
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="Background" Value="AntiqueWhite" />
+
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Background" Value="AntiqueWhite" />
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="BurlyWood"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="SandyBrown" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Margin" Value="3" />
+            <Setter Property="Padding" Value="3" />
+        </Style>
+    </Window.Resources>
 </Window>
