Now creating workitems. Time to polish it up a bit.
AdditionalFields needs to be visible in the UI.

If Connected to an instance, show the workitem types for that project, and when one of the wi types is selected, show the fields in the additional fields for it

--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -47,7 +47,7 @@
         </StatusBar>
     </Grid>
     <Window.Resources>
-        <!-- This window style doesnt work -->
+        <!-- This window style doesn't work -->
         <!--<Style TargetType="Window">
             <Setter Property="Background" Value="NavajoWhite" />
             <Setter Property="FontFamily" Value="Calibri" />
@@ -88,9 +88,9 @@
     </Window.Resources>
 </Window>
 <!--
-Pallete
+Palette
 #969A97  - Battleship Grey
-#D6D1CD - Timberwolf
+#D6D1CD - Timber wolf
 #E5ECE9 - Mint Creme
 #5B2333 - Wine
 #564D4A - walnut brown
