--- a/WorkitemCreator/AdditionalFieldAndValue.xaml
+++ b/WorkitemCreator/AdditionalFieldAndValue.xaml
@@ -12,9 +12,10 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="25"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalContentAlignment="Right" Content="" Name="FieldName"/>
-        <TextBox Name="FieldValue" HorizontalAlignment="Stretch" Text="" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"></TextBox>
-        <CheckBox Name="FieldIsEnabled" MaxWidth="20" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="2" Margin="0 0 5 0"></CheckBox>
-        <CheckBox Name="FieldIsEligible" Visibility="Collapsed" Grid.Row="0" Grid.Column="2"></CheckBox>
+        <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalContentAlignment="Right" Content="{Binding Path=FieldName, Mode=OneWay}" Name="FieldName"/>
+        <TextBox Name="FieldValue" HorizontalAlignment="Stretch" Text="{Binding Path=Value, Mode=TwoWay}" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"
+                 IsEnabled="{Binding Path=IsEligible, Mode=OneWay}"/>
+        <CheckBox Name="FieldIsEnabled" MaxWidth="20" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="2" Margin="0 0 5 0" IsChecked="{Binding Path=IsEnabled, Mode=TwoWay}" />
+        <CheckBox Name="FieldIsEligible" Visibility="Collapsed" Grid.Row="0" Grid.Column="2" IsChecked="{Binding Path=IsEligible, Mode=TwoWay}" />
     </Grid>
 </UserControl>
