--- a/WorkitemCreator/AdditionalFieldAndValue.xaml
+++ b/WorkitemCreator/AdditionalFieldAndValue.xaml
@@ -1,10 +1,16 @@
-﻿<UserControl x:Class="WorkitemCreator.AdditionalFieldAndValue"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             
+             xmlns:local="clr-namespace:WorkitemCreator" x:Class="WorkitemCreator.AdditionalFieldAndValue" 
+             
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="400">
+    <UserControl.DataContext>
+        <local:AdditionalFieldAndValueViewModel/>
+    </UserControl.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MaxWidth="150"/>
@@ -12,12 +18,12 @@
             <ColumnDefinition Width="25"/>
         </Grid.ColumnDefinitions>
         <ComboBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalContentAlignment="Right" 
-                  SelectedItem="{Binding Path=FieldName, Mode=TwoWay}"
-                  ItemsSource="{Binding Path=AvailableFields}"
-                  Name="FieldName"/>
-        <TextBox Name="FieldValue" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"
-                 IsEnabled="{Binding Path=IsEligible, Mode=OneWay}" Text="{Binding Path=Value, Mode=TwoWay}"/>
-        <CheckBox Name="FieldIsEnabled" MaxWidth="20" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="2" Margin="0 0 5 0" IsChecked="{Binding Path=IsEnabled, Mode=TwoWay}" />
-        <CheckBox Name="FieldIsEligible" Visibility="Collapsed" Grid.Row="0" Grid.Column="2" IsChecked="{Binding Path=IsEligible, Mode=TwoWay}" />
+                  SelectedItem="{Binding FieldName, Mode=TwoWay}" SelectedValuePath="Name" DisplayMemberPath="Name"
+                  ItemsSource="{Binding AllFields}"
+                  x:Name="FieldName"/>
+        <TextBox x:Name="FieldValue" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"
+                 IsEnabled="{Binding IsEligible, Mode=OneWay}" Text="{Binding Value, Mode=TwoWay}"/>
+        <CheckBox x:Name="FieldIsEnabled" MaxWidth="20" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="2" Margin="0 0 5 0" IsChecked="{Binding IsEnabled, Mode=TwoWay}" />
+        <CheckBox x:Name="FieldIsEligible" Visibility="Collapsed" Grid.Row="0" Grid.Column="2" IsChecked="{Binding IsEligible, Mode=TwoWay}" />
     </Grid>
 </UserControl>
