--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -35,7 +35,7 @@
                       SelectionChanged="TeamProjectList_SelectionChanged" />
         </StackPanel>
 
-        <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" />
+        <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" IsEnabled="False" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1">
             <Button Name="CreateWorkitems" Content="Create Workitem(s)" Click="CreateWorkitems_Click" IsEnabled="False" />
         </StackPanel>
