--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -28,8 +28,11 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
             <Label Content="Select Project:" />
-            <ComboBox Name="TeamProjectList" MinWidth="150" IsEnabled="False"
+            <ComboBox Name="TeamProjectList" MinWidth="150" IsEnabled="False" DisplayMemberPath="Name"
                       SelectionChanged="TeamProjectList_SelectionChanged" />
+            <Label Content="Select Team:" />
+            <ComboBox Name="TeamsList" MinWidth="150" IsEnabled="False" DisplayMemberPath="Name"
+                      SelectionChanged="TeamsList_SelectionChanged" />
         </StackPanel>
 
         <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" IsEnabled="False" />
