--- a/WorkitemCreator/TemplateSelector.xaml
+++ b/WorkitemCreator/TemplateSelector.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WorkitemCreator"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -11,12 +10,9 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
             <Label Content="Parent Template" HorizontalAlignment="Right"></Label>
-            <ComboBox HorizontalAlignment="Stretch" Name="ParentWorkItemTemplate"></ComboBox>
+            <ComboBox HorizontalAlignment="Stretch" Name="ParentWorkItemTemplate" DisplayMemberPath="Title" SelectedValuePath="Id"></ComboBox>
         </StackPanel>
 
         <ScrollViewer Grid.Column="0" Grid.Row="1">
