--- a/WorkitemCreator/AdditionalFieldAndValue.xaml
+++ b/WorkitemCreator/AdditionalFieldAndValue.xaml
@@ -1,27 +1,33 @@
 ﻿<UserControl
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             
-             xmlns:local="clr-namespace:WorkitemCreator" x:Class="WorkitemCreator.AdditionalFieldAndValue" 
-             
-             mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="400">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+
+    xmlns:local="clr-namespace:WorkitemCreator" x:Class="WorkitemCreator.AdditionalFieldAndValue"
+
+    mc:Ignorable="d"
+    d:DesignHeight="30" d:DesignWidth="400">
     <UserControl.DataContext>
-        <local:AdditionalFieldAndValueViewModel/>
+        <local:AdditionalFieldAndValueViewModel />
     </UserControl.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MaxWidth="150"/>
+            <ColumnDefinition MaxWidth="150" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="25"/>
+            <ColumnDefinition Width="25" />
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" HorizontalContentAlignment="Right" 
-                  Content="{Binding FieldName, Mode=OneWay}" x:Name="FieldName"/>
-        <TextBox x:Name="FieldValue" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"
-                 IsEnabled="{Binding IsEligible, Mode=OneWay}" Text="{Binding Value, Mode=TwoWay}" TextChanged="FieldValue_OnTextChanged" />
-        <CheckBox x:Name="IncludeFieldWhenCreating" MaxWidth="20" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="2" Margin="0 0 5 0" IsChecked="{Binding IncludeWhenCreating, Mode=TwoWay}" />
-        <CheckBox x:Name="FieldIsEligible" Visibility="Collapsed" Grid.Row="0" Grid.Column="2" IsChecked="{Binding IsEligible, Mode=TwoWay}" />
+        <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right"
+               HorizontalContentAlignment="Right"
+               Content="{Binding FieldName, Mode=OneWay}" x:Name="FieldName" />
+        <TextBox x:Name="FieldValue" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="0"
+                 Grid.Column="1"
+                 IsEnabled="{Binding IsEligible, Mode=OneWay}" Text="{Binding Value, Mode=TwoWay}"
+                 TextChanged="FieldValue_OnTextChanged" />
+        <CheckBox x:Name="IncludeFieldWhenCreating" MaxWidth="20" VerticalAlignment="Center"
+                  HorizontalAlignment="Right" Grid.Row="0" Grid.Column="2" Margin="0 0 5 0"
+                  IsChecked="{Binding IncludeWhenCreating, Mode=TwoWay}" />
+        <CheckBox x:Name="FieldIsEligible" Visibility="Collapsed" Grid.Row="0" Grid.Column="2"
+                  IsChecked="{Binding IsEligible, Mode=TwoWay}" />
     </Grid>
 </UserControl>
