--- a/WorkitemCreator/TemplateSelector.xaml
+++ b/WorkitemCreator/TemplateSelector.xaml
@@ -1,26 +1,35 @@
 ﻿<UserControl x:Class="WorkitemCreator.TemplateSelector"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-            <Label Content="Parent Template" HorizontalAlignment="Right"></Label>
-            <ComboBox HorizontalAlignment="Stretch" Name="ParentWorkItemTemplate" DisplayMemberPath="Title" SelectedValuePath="Id"></ComboBox>
-        </StackPanel>
 
-        <ScrollViewer Grid.Column="0" Grid.Row="1">
-            <StackPanel Name="ChildTemplates">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Name="AddChildWorkitemTemplate" Content="Add Child" Height="25" Margin="4" Click="AddChildWorkitemTemplate_OnClick"/>
-                </StackPanel>
+        <Label Content="Parent Template" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="0" />
+        <ComboBox HorizontalAlignment="Stretch" Name="ParentWorkItemTemplate" DisplayMemberPath="Title"
+                  SelectedValuePath="Id" Grid.Row="0" Grid.Column="1" />
+        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1">
+            <Grid Name="ChildTemplates">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="80" />
+                </Grid.ColumnDefinitions>
+            </Grid>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Name="AddChildWorkitemTemplate" Content="Add Child" Height="25" Margin="4" Width="72"
+                        Click="AddChildWorkitemTemplate_OnClick" />
             </StackPanel>
-        </ScrollViewer>
+        </StackPanel>
     </Grid>
 </UserControl>
