--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -17,8 +17,9 @@
             <RowDefinition MaxHeight="30" />
             <RowDefinition MaxHeight="30" />
             <RowDefinition />
+            <RowDefinition MaxHeight="100" />
             <RowDefinition MaxHeight="30" />
-            <RowDefinition MaxHeight="30" />
+            <RowDefinition MaxHeight="35" />
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
             <Label Content="Service Url:" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -36,11 +37,15 @@
         </StackPanel>
 
         <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" IsEnabled="False" />
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="4" Grid.Column="1">
+        <TextBlock Grid.Row="4" Grid.Column="1" Name="LogWindow">
+
+        </TextBlock>
+
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="5" Grid.Column="1">
             <Button Name="CreateWorkitems" Content="Create Workitem(s)" Click="CreateWorkitems_Click" IsEnabled="False" />
         </StackPanel>
         <StatusBar Name="StatusBar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0"
-                   Grid.ColumnSpan="3" Grid.Row="5">
+                   Grid.ColumnSpan="3" Grid.Row="6">
             <StatusBarItem MinWidth="50">
                 <Label Name="ConnectionState" Content="Not connected" />
             </StatusBarItem>
