--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -37,8 +37,9 @@
         </StackPanel>
 
         <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" IsEnabled="False" />
-        <TextBlock Grid.Row="4" Grid.Column="1" Name="LogWindow" />
-
+        <ScrollViewer Grid.Row="4" Grid.Column="1" >
+            <TextBlock Name="LogWindow" />
+        </ScrollViewer>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="5" Grid.Column="1">
             <Button Name="CreateWorkitems" Content="Create Workitem(s)" Click="CreateWorkitems_Click" IsEnabled="False" />
         </StackPanel>
@@ -62,14 +63,12 @@
         <Style TargetType="Label">
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Center" />
-
         </Style>
         <Style TargetType="{x:Type TabControl}">
             <Setter Property="Margin" Value="0 10 0 10" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
             <Setter Property="VerticalContentAlignment" Value="Stretch" />
-
             <Setter Property="Background" Value="#D6D1CD" />
             <!--<Setter Property="OverridesDefaultStyle" Value="True" />
             <Setter Property="SnapsToDevicePixels" Value="True" />
@@ -129,7 +128,9 @@
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Background" Value="#E5ECE9" />
-
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="Background" Value="#E5ECE9" />
         </Style>
         <Style TargetType="ComboBox">
             <Setter Property="VerticalAlignment" Value="Center" />
