--- a/WorkitemCreator/MainWindow.xaml
+++ b/WorkitemCreator/MainWindow.xaml
@@ -37,7 +37,7 @@
         </StackPanel>
 
         <TabControl Grid.Row="3" Grid.Column="1" Name="WorkItemTemplates" IsEnabled="False" />
-        <ScrollViewer Grid.Row="4" Grid.Column="1" >
+        <ScrollViewer Grid.Row="4" Grid.Column="1">
             <TextBlock Name="LogWindow" />
         </ScrollViewer>
         <Grid Grid.Row="5" Grid.Column="1">
@@ -46,9 +46,12 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button Name="AddTemplateSet" Content="Add Template Set" Click="AddTemplateSet_OnClick" Grid.Row="0" Grid.Column="0" IsEnabled="False" />
-            <Button Name="SaveConfig" Content="Save Config" Click="SaveConfig_OnClick" Grid.Row="0" Grid.Column="1"  IsEnabled="False"/>
-            <Button Name="CreateWorkitems" Content="Create Workitem(s)" Click="CreateWorkitems_Click" IsEnabled="False" Grid.Row="0" Grid.Column="2"/>
+            <Button Name="AddTemplateSet" Content="Add Template Set" Click="AddTemplateSet_OnClick" Grid.Row="0"
+                    Grid.Column="0" IsEnabled="False" />
+            <Button Name="SaveConfig" Content="Save Config" Click="SaveConfig_OnClick" Grid.Row="0" Grid.Column="1"
+                    IsEnabled="False" />
+            <Button Name="CreateWorkitems" Content="Create Workitem(s)" Click="CreateWorkitems_Click" IsEnabled="False"
+                    Grid.Row="0" Grid.Column="2" />
         </Grid>
         <StatusBar Name="StatusBar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0"
                    Grid.ColumnSpan="3" Grid.Row="6">
